<resources>
    <string name="app_name">Loomi</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="course">Course</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="sign_in"><u>Login</u></string>
    <string name="already_have_an_account">Sudah punya akun?</string>
    <string name="sign_up"><u>Daftar</u></string>
    <string name="don_t_have_an_account">Belum punya akun?</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="agree_with_terms_and_conditions"><![CDATA[Menyetujui syarat dan ketentuan]]></string>
    <string name="name">Nama</string>
    <string name="hallo">👋 Hallo,</string>
    <string name="great_to_see_you_again">Great to see you again!</string>
    <string name="txt_title_articles">Data structures and Algorithms are used in Android’s Architecture and Components</string>
    <string name="search_material">Search material</string>
    <string name="your_progress_is_amazing">Your progress is amazing!</string>
    <string name="keep_up_the_good_work">Keep up the good work</string>
    <string name="continue_studying">Lanjut Belajar</string>
    <string name="night_mode">Night mode</string>
    <string name="john_doe">John Doe</string>
    <string name="kotlin">Kotlin</string>
    <string name="back">Back</string>
    <string name="kotlin_fundamental">Kotlin Fundamental</string>
    <string name="description_kotlin_fundamental">
    <![CDATA[
    <h3>Apa yang akan dipelajari?</h3>
    &#8226; Kotlin Fundamental (Data Types, Operators, Strings, Booleans, Control Flow)<br/>
    &#8226; Array, Ranges, dan Loops<br/>
    &#8226; Object-Oriented Programming (OOP) dengan Kotlin<br/><br/>

    <h3>Target Audiens</h3>
    &#8226; Mahasiswa/i IT yang sedang belajar dasar pemrograman<br/>
    &#8226; Developer pemula atau professional yang ingin belajar Android menggunakan Kotlin<br/><br/>

    <h3>Manfaat Setelah Mengikuti Kelas Ini</h3>
    &#8226; Memahami dasar sintaks Kotlin melalui praktik langsung<br/>
    &#8226; <a href="https://developer.android.com/jetpack/compose">Siap lanjut ke topik lanjutan seperti Jetpack Compose atau MVVM Architecture</a>
    ]]>
</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Lanjut</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
    </string>
    <string name="val_a_5_nval_b_10_nif_a_b">val a = 5\nval b = 10\nif ( ___ a ___ b )</string>
    <string name="finish">Selesai!</string>
    <string name="sample_code_snippet"> b ) {\n println("Hello World")\n}</string>
    <string name="while_and_do_while">While and Do While</string>
    <string name="description_kotlin">Deskripsi kelas Kotlin di sini...</string>
    <string name="your_password">Password</string>
    <string name="password">Kata sandi</string>
    <string name="your_email">Email</string>
    <string name="hi_welcome_back">Hai, selamat datang kembali</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="create_account">Buat akun baru</string>
    <string name="fill_your_information_below">Silahkan isi informasi di bawah ini</string>
    <string name="your_name">Nama Lengkap</string>
    <string name="johndoe_gmail_com">Johndoe@gmail.com</string>
    <string name="show_hide_password">show hidden</string>
    <string name="forgot_password">Lupa Kata sandi?</string>
    <string name="notification">Notifikasi</string>
    <string name="description_article">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mattis, dolor vitae eleifend tristique, quam arcu facilisis nunc, ut egestas dui nisi placerat arcu. Ut sapien libero, tristique eget porta quis, interdum id leo. Ut ullamcorper pellentesque justo, quis dictum sapien posuere et. Fusce dictum pulvinar risus eu scelerisque. Vivamus quis auctor ex, ut bibendum lacus. Nulla accumsan interdum augue, in maximus nulla porttitor vitae. Vestibulum tristique laoreet eleifend. Fusce aliquet felis sit amet massa placerat ultricies. Curabitur dapibus fermentum tincidunt. Integer ut luctus metus. Vivamus justo massa, rhoncus quis neque quis, faucibus tincidunt ex.</string>
    <string name="recommendation_article">Rekomendasi Artikel</string>
    <string name="article_image">Article Image</string>
    <string name="discover_the_latest_articles">Temukan artikel terbaru</string>
    <string name="read_more">Baca selengkapnya</string>
    <string name="content_type">Content Type</string>
    <string name="title_content">Judul</string>
    <string name="description_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="if_else">If Else</string>
    <string name="next_material">Materi Selanjutnya</string>
    <string name="skip">Lompati</string>
    <string name="_4_10">4/10</string>
    <string name="tap_to_continue">Tap untuk melanjutkan</string>

</resources>