<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="16dp"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/txt_hallo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/hallo"
            android:textColor="@color/dark_green"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="32dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            app:layout_constraintStart_toEndOf="@id/txt_hallo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/notification"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/great_to_see_you_again"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_hallo" />

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="Search"
            android:background="@drawable/bg_search"
            android:drawableStart="@drawable/ic_search"
            android:ems="10"
            android:hint="@string/search_material"
            android:layout_marginTop="16dp"
            android:inputType="text"
            android:forceDarkAllowed="false"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Bagian bawah yang bisa di-scroll -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="153dp"
        android:fillViewport="true"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/card_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/green"
                app:cardBackgroundColor="@color/green"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/progressBar2"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="15dp"
                        android:max="100"
                        android:progress="0"
                        android:progressTint="@color/white"
                        android:progressTintMode="multiply" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:text="@string/your_progress_is_amazing" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/keep_up_the_good_work" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txt_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:text="@string/continue_studying"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/dark_green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_progress" />

            <include
                android:id="@+id/item_course"
                layout="@layout/item_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/txt_continue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/txt_recommendation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:text="Recommendation Article"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/dark_green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_course" />

            <include
                android:id="@+id/item_article"
                layout="@layout/item_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:paddingBottom="80dp"
                app:layout_constraintTop_toBottomOf="@id/txt_recommendation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
